momentum/css/style.css
@font-face {
  font-family: 'Arial-MT';
  src: url("../assets/fonts/Arial-MT.woff"); /* Путь к файлу со шрифтом */
 }

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  min-width: 480px;
  min-height: 100vh;
  font-family: 'Arial', sans-serif;
  font-size: 16px;
  color: #fff;
  text-align: center;
  background: center/cover, rgba(0, 0, 0, 0.5);
  background-blend-mode: multiply;
  transition: background-image 1s ease-in-out;
  overflow-x: hidden;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  height: 30vh;
  min-height: 220px;  
  padding: 20px;
}

.song-name {
  padding-bottom: 6px;
  font-size: 20px;
  line-height: 24px;
  color: #fff;
}

.controls {
  display: flex;
  align-items: center;
}

.player-controls {
  width: 55%;
  margin: 5px 25px 18px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.controls_more-music-icon {
  margin-bottom: 5px;
}

/* Play-list widget */

.widget {
  position: absolute;
  top: 130px;
  left: 20px;
}

.widget-container {
  width: 250px;
  height: 200px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  background: linear-gradient(90deg, #ff74a4 0%, #9f6ea3 100%);
  border-radius: 10px;
  z-index: -100;
  transition: all .5s ease-in-out;
  opacity: 0;
}

.widget_active {
  z-index: 100;
}

.widget-play-list_active {
  opacity: 1;
  transform: translateY(45px);
  z-index: 123456;
}

/* Volume */

.slider_container{
  margin-top: 15px;
  margin-right: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.volume-up {
  cursor: pointer;
  background-image: url("../assets/svg/volume-high.svg");
}

.volume-off {
  background-image: url("../assets/svg/volume-off.svg");
}

.volume-slider {
  appearance: none;
  width: 30%;
  height: 5px;
  background: #f0f0f0;
  background-image: linear-gradient(90deg, #ff74a4 0%, #9f6ea3 100%);
  border-radius: 50px;
  transition: opacity .2s;
  background-size: 50% 100%;
  background-repeat: no-repeat;
  cursor: pointer;
}

.volume-slider::-webkit-slider-thumb {
  appearance: none;
  width: 12px;
  height: 12px;
  background: linear-gradient(90deg, #ff74a4 0%, #9f6ea3 100%);
  border-radius: 50px;
  cursor: pointer;
  opacity: 0;
  transition: opacity 0.2s ease;
}

.slider_container:hover .volume-slider::-webkit-slider-thumb {
  opacity: 1;
}

/* Playlist */

.play-list {
  display: none;
  text-align: left;
}

.play-list_active {
  display: block;
}

.play-item {
  position: relative;
  padding: 5px;
  padding-left: 10px;
  list-style: none;
  opacity: .8;
  cursor: pointer;
  transition: .3s;
}

.play-item_active {
  color: #F9F871;
}

.play-item:hover {
  opacity: 1;
}

.item-active::before {
  color: #C5B358;
}

.player-icon,
.slider-icon,
.change-quote,
.volume-up,
.more-music-icon {
  width: 32px;
  height: 32px;
  background-size: 32px 32px;
  background-position: center center;
  background-repeat: no-repeat;
  background-color: transparent;
  border: 0;
  outline: 0;
  opacity: .8;
  cursor: pointer;
  transition: .3s;  
}

.player-icon:hover,
.slider-icon:hover,
.change-quote:hover {
  opacity: 1;
}

.player-icon:active,
.slider-icon:active,
.change-quote:active {
  border: 0;
  outline: 0;  
  transform: scale(1.1);
}

.play-items-wrapper {
  display: flex;
  align-items: center;
}

.play {
  width: 40px;
  height: 40px;
  background-size: 40px 40px;
  background-image: url("../assets/svg/play.svg");
}

.small-play {
  width: 20px;
  height: 20px;
  background-size: 20px 20px;
}

.pause {
  background-image: url("../assets/svg/pause.svg");
}

.play-prev {
  background-image: url("../assets/svg/play-prev.svg");
}

.play-next {
  background-image: url("../assets/svg/play-next.svg");
}

.progress-area {
  width: 250px;
  height: 6px;
  background: #f0f0f0;
  border-radius: 50px;
  cursor: pointer;
}

.progress-bar {
  /*width: 50%;*/
  width: 0;
  height: inherit;
  position: relative;
  border-radius: inherit;
  background: linear-gradient(90deg, #ff74a4 0%, #9f6ea3 100%);
}

.progress-bar::before {
  content: "";
  position: absolute;
  height: 12px;
  width: 12px;
  border-radius: inherit;
  top: 50%;
  right: -5px;
  transform: translateY(-50%);
  background: inherit;
  opacity: 0;
  transition: opacity 0.2s ease;
}

.progress-area:hover .progress-bar::before {
  opacity: 1;
}

.timer {
  margin-top: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.timer span {
  font-size: 14px;
}

.weather {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  row-gap: 5px;
  width: 180px;
  min-height: 180px;  
  text-align: left;
}

.error {
  padding: 10px;
  border-radius: 3px 3px 3px 3px;
  color: #D8000C;
  background-color: #FFBABA;
}

.weather-error {
  width: 170px;
  margin-top: -10px;
}

.description-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  column-gap: 12px;
  row-gap: 6px;
}

.weather-icon {
  font-size: 44px;
}

.city {
  width: 170px;
  height: 34px;
  padding: 5px;
  font-size: 20px;
  line-height: 24px;
  color: #fff;  
  border: 0;
  outline: 0;
  border-bottom: 1px solid #fff;
  background-color: transparent;
}

.city::placeholder {  
  font-size: 20px;
  color: #fff;
  opacity: .6;
}

.main {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 40vh;
  min-height: 260px;  
  padding: 20px;
}

.slider-icon {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  cursor: pointer;
}

.slide-prev {
  left: 20px;
  background-image: url("../assets/svg/slider-prev.svg");
}

.slide-next {
  right: 20px;
  background-image: url("../assets/svg/slider-next.svg");
}

.time {
  min-height: 124px;
  margin-bottom: 10px;
  font-family: 'Arial-MT';
  font-size: 100px;
  letter-spacing: -4px;  
}

.date {
  min-height: 28px;
  font-size: 24px;
  margin-bottom: 20px;
}

.greeting-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: stretch;
  align-items: center;
  min-height: 48px;
  width: 100vw;
  font-size: 40px;
}

.greeting {
  flex: 1;  
  padding: 10px;
  text-align: right;
}

.name {
  flex: 1;
  max-width: 50%;
  padding: 10px;
  font-size: 40px;
  text-align: left;
  color: #fff;
  background-color: transparent;
  border: 0;
  outline: 0;
}

.name::placeholder {
  color: #fff;
  opacity: .6;
}

.footer {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  width: 100%;
  height: 30vh;
  min-height: 160px;  
  padding: 20px;
}

.change-quote {
  margin-bottom: 30px;
  background-image: url("../assets/svg/reload.svg");  
}

.quote {
  min-height: 32px;
}

.author {
  min-height: 20px;
}

/* Language Change */
.language-wrapper {
  position: absolute;
  right: 20px;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.lang-ru {
  margin-right: 10px;
}

.switch {
  display: inline-block;
  position: relative;
  font-size: 16px;
  line-height: 24px;
}

/* Checked */
.switch__input:checked + .switch__label::before {
  background:  linear-gradient(90deg, #ff74a4 0%, #9f6ea3 100%);
}

.switch__input:checked + .switch__label::after {
  left: 16px;
}

.switch__input {
  position: absolute;
  top: 0;
  left: 0;
  width: 36px;
  height: 20px;
  opacity: 0;
  z-index: 0;
}

/* Unchecked */
.switch__label {
  display: block;
  padding: 0 0 0 44px;
  cursor: pointer;
}

.switch__label::before {
  content: '';
  position: absolute;
  top: 5px;
  left: 0;
  width: 36px;
  height: 14px;
  background-color: rgba(0, 0, 0, .26);
  border-radius: 14px;
  z-index: 1;
  transition: background-color 0.28s cubic-bezier(.4, 0, .2, 1);
}

.switch__label::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 0;
  width: 20px;
  height: 20px;
  background-color: #fff;
  border-radius: 14px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
  z-index: 2;
  transition: all 0.28s cubic-bezier(.4, 0, .2, 1);
  transition-property: left, background-color;
}

@media (max-width: 768px) {
  .time {
    min-height: 80px;
    font-size: 72px;    
  }

  .greeting-container {
    min-height: 40px;
    font-size: 32px;
  }

  .greeting {
    padding: 5px;
  }

  .name {
    font-size: 32px;
    padding: 5px;
  }
}

